<resources>
    <string name="app_name">SampleApp</string>
    <string name="main_title">Test Actions:</string>

    <string name="linear_layout">androidx.recyclerview.widget.LinearLayoutManager</string>

    <string name="title_login">Login:</string>
    <string name="bttn_me">Me</string>
    <string name="bttn_tickets">Tickets</string>
    <string name="bttn_tickets_search">Tickets Search</string>
    <string name="bttn_users">Users</string>
    <string name="bttn_groups">Groups</string>
    <string name="bttn_roles">Roles</string>
    <string name="bttn_tags">Tags</string>
    <string name="bttn_overviews">Overviews</string>
    <string name="bttn_organizations">Organizations</string>
    <string name="bttn_priorities">Priorities</string>
    <string name="bttn_states">States</string>
    <string name="bttn_objects">Objects</string>
    <string name="bttn_notifications">Notifications</string>
    <string name="bttn_submit">Submit</string>
    <string name="bttn_update">Update</string>
    <string name="bttn_delete">Delete</string>
    <string name="bttn_articles">Articles</string>

    <string name="ticket_create">Create new Ticket:</string>
    <string name="ticket_update">Update Ticket:</string>
    <string name="ticket_title">Ticket Title:</string>
    <string name="ticket_article_subject">Subject:</string>
    <string name="ticket_article_body">Body:</string>

    <string name="article_create">Create new Article:</string>
    <string name="article_to">To:</string>
    <string name="article_cc">CC:</string>
    <string name="article_subject">Subject:</string>
    <string name="article_body">Body:</string>

    <string name="group_update">Update Group:</string>
    <string name="organization_update">Update Organization:</string>
    <string name="state_update">Update Ticket State:</string>
    <string name="priority_update">Update Ticket Priority:</string>

    <string name="hint_name">Name:</string>
    <string name="hint_firstname">Firstname:</string>
    <string name="hint_lastname">Lastname:</string>
    <string name="hint_active">Active:</string>
    <string name="hint_shared">Shared:</string>
    <string name="hint_email">Email:</string>
    <string name="hint_phone">Phone:</string>
    <string name="hint_mobile">Mobile:</string>
    <string name="hint_note">Note:</string>
    <string name="hint_baseurl">Baseurl:</string>
    <string name="hint_username">Username:</string>
    <string name="hint_password">Password:</string>
    <string name="hint_search">Search:</string>

    <string name="no_items">No items to show.</string>
    <string name="unauthorized_error">Error while trying to login!\nUnauthorized! Please check your username and password.</string>
    <string name="inaccessible_error">Error while trying to login!\nUrl is inaccessible! Check network and input!</string>
</resources>
