<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/article_create" />

    <EditText
            android:id="@+id/article_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/article_to"
            android:importantForAutofill="no" />

    <EditText
            android:id="@+id/article_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/article_cc"
            android:importantForAutofill="no" />

    <EditText
            android:id="@+id/article_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/article_subject"
            android:importantForAutofill="no" />

    <EditText
            android:id="@+id/article_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/article_body"
            android:importantForAutofill="no" />

    <Button
            android:id="@+id/bttn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bttn_submit" />

</LinearLayout>