<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/ticket_create" />

    <!--EditText
            android:id="@+id/ticket_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:enabled="false"
            android:inputType="text"
            android:hint="@string/ticket_id" /-->

    <EditText
            android:id="@+id/ticket_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/ticket_title"
            android:importantForAutofill="no" />

    <Spinner
            android:id="@+id/ticket_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:spinnerMode="dialog" />

    <Spinner
            android:id="@+id/ticket_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:spinnerMode="dialog" />

    <Spinner
            android:id="@+id/ticket_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:spinnerMode="dialog" />

    <Spinner
            android:id="@+id/ticket_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:spinnerMode="dialog" />

    <Spinner
            android:id="@+id/ticket_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:spinnerMode="dialog" />

    <EditText
            android:id="@+id/ticket_article_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/ticket_article_subject"
            android:importantForAutofill="no" />

    <EditText
            android:id="@+id/ticket_article_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/ticket_article_body"
            android:importantForAutofill="no" />

    <Button
            android:id="@+id/bttn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bttn_submit" />

</LinearLayout>